# caul

./: .gitignore  AGENTS.md  Cargo.toml  README.md  electron-builder.config.cjs  index.html  model-catalog.json  package-lock.json  package.json  vite.config.ts
.github/workflows/: pages.yml  release.yml
assets/: caul.af  susura.af
assets/icons/: icon.icns
assets/icons/beta/: icon.icns
assets/icons/beta/dark/: icon.icns
assets/icons/dark/: icon.icns
crates/audio-core/: Cargo.toml
crates/audio-core/src/: lib.rs
crates/desktop-backend/: Cargo.toml
crates/desktop-backend/src/: local_transcription.rs  main.rs  system_audio.rs
crates/desktop-ui/: Cargo.toml
crates/desktop-ui/src/: lib.rs  main.rs
crates/macos-capture/: Cargo.toml
crates/macos-capture/src/: lib.rs
crates/session-core/: Cargo.toml
crates/session-core/src/: lib.rs
docs/: README.md  architecture.md  competitor-notes.md  cross-platform-release-plan.md  development.md  downloadPage.test.mjs  index.html  llm-first-chunk-optimisation.md  macos-audio.md  model-recommendation.md  philosophy.md  resources.md
docs/superpowers/plans/: 2026-06-10-harden-vm-release-e2e.md
electron/: CaulReleaseInherit.entitlements  SusuraDevElectron.entitlements  SusuraReleaseInherit.entitlements  electronBuilderConfig.test.mjs  history.cjs  history.test.mjs  llmAttachments.cjs  llmAttachments.test.mjs  llmConfig.json  localAiSelection.cjs  localAiSelection.test.mjs  localLlm.cjs  localLlm.test.mjs  macosAudioHelperPlist.test.mjs  main.cjs  modelCatalogueRefresh.cjs  modelRecommendation.cjs  modelRecommendation.test.mjs  onboardingCatalogueRefresh.test.mjs  permissions.cjs  permissions.test.mjs  piAuthNoTerminal.test.mjs  preload.cjs  privateOverlayGeometry.cjs  privateOverlayGeometry.test.mjs  profile.cjs  profile.test.mjs  transcriptionStopFlush.cjs  transcriptionStopFlush.test.mjs  updater.cjs  updater.test.mjs
native/macos-audio-helper/: CaulAudioHelper.entitlements  Package.resolved  Package.swift  SusuraAudioHelper.entitlements
native/macos-audio-helper/Sources/CaulAudioHelper/: Info.plist  main.swift
native/macos-audio-helper/Sources/SusuraAudioHelper/: Info.plist  main.swift
scripts/: after-pack.cjs  assert-apple-silicon-macos-package.mjs  assert-vm-e2e-summaries.mjs  audio-isolation-gate.mjs  audio-isolation-gate.test.mjs  audit-model-catalogue.mjs  bench-live-call-pipeline.mjs  bench-llm-bridges.mjs  bench-llm-first-chunk.mjs  bench-parakeet-direct.mjs  browser-audio-tone.mjs  browser-speech-audio.mjs  build-desktop-backend.mjs  build-linux-deb.mjs  build-macos-audio-helper.mjs  check-parallels-macos-vm.mjs  check-parallels-release-vm.mjs  clean-package-output.mjs  diagnose-macos-audio-route.mjs  generate-icons.cjs  launch-mac-dev-app.mjs  launch-mac-dev-app.test.mjs  logo-update.cjs  package-fedora-rpm-vm.sh  prepare-electron-normal-mode.mjs  prepare-electron-private-mode.mjs  prepare-pi-bundle.cjs  prepare-windows-7za.mjs  recommend-models.mjs  refresh-model-catalogue.mjs  release.sh  run-pi-json.py  smoke-browser-system-audio.mjs  smoke-core-audio-browser-system-audio.mjs  smoke-local-parakeet-browser-system-audio.mjs  smoke-local-parakeet-helper-system-audio.mjs  smoke-local-parakeet-renderer-known-text.mjs  smoke-local-parakeet-start-offset.mjs  smoke-muted-browser-system-audio.mjs  smoke-onboarding-local-ai-lag.mjs  (+13 more)
scripts/vm/: cleanup.mjs  commands.mjs  linux-audio.mjs  profiles.mjs  stage.mjs  summary.mjs
src/: App.test.tsx  App.tsx  styles.css  vite-env.d.ts
src/components/ui/: checkbox.tsx  select.tsx  tooltip.test.tsx  tooltip.tsx
src/foundation/: capture.test.ts  capture.ts  desktopBridge.ts  provisionalTranscript.test.ts  provisionalTranscript.ts  runtime.ts  transcriptionProvisionalTailLab.test.ts
src/hooks/: useCaptureTest.ts  useLiveTranscription.ts  useRuntimeContext.ts  useSystemColourScheme.test.ts  useSystemColourScheme.ts
src/test/: setup.ts
