[package]
name = "susura-desktop-backend"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
base64.workspace = true
cpal.workspace = true
ctrlc.workspace = true
hound = "3"
rubato.workspace = true
serde.workspace = true
serde_json.workspace = true
susura-audio-core = { path = "../audio-core" }
transcribe-rs.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
susura-macos-capture = { path = "../macos-capture" }

[target.'cfg(target_os = "windows")'.dependencies]
wasapi = "0.23"
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Dwm", "Win32_UI_WindowsAndMessaging"] }
