[package]
name = "susura-desktop-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dioxus.workspace = true
dioxus-native.workspace = true
susura-macos-capture = { path = "../macos-capture" }
susura-audio-core = { path = "../audio-core" }
susura-session-core = { path = "../session-core" }
