[package]
name = "caul-desktop-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
dioxus.workspace = true
dioxus-native.workspace = true
caul-macos-capture = { path = "../macos-capture" }
caul-audio-core = { path = "../audio-core" }
caul-session-core = { path = "../session-core" }
