[package]
name = "susura-macos-capture"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
libc.workspace = true
serde.workspace = true
serde_json.workspace = true
susura-audio-core = { path = "../audio-core" }
thiserror.workspace = true
